--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: Create Amazon EKS on AWS Fargate
 on: 
   push:
     branches: 
-      - main
+      - master
 
 jobs:
   create_cluster:
@@ -18,4 +18,4 @@ jobs:
         aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_KEY }}
         aws-region: us-west-1
     - name: Provision cluster
-      uses: aws-actions/amazon-eks-fargate@v0.1
+      uses: aws-actions/amazon-eks-fargate@v0.1.1
