--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.MY_AWS_ACCESS_KEY }}
         aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_KEY }}
-        aws-region: us-west-1
+        aws-region: eu-west-1
     - name: Provision cluster
       uses: aws-actions/amazon-eks-fargate@v0.1.1
