--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,24 @@
-name: Create Amazon EKS on AWS Fargate
-
-
-on: 
+name: Deploy Container image to aws ECR
+on:
   push:
-    branches: 
-      - master
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+jobs: 
+    aws_ecr_dockerfile_deploy:
+        runs-on: ubuntu-latest
+        name: AWS ecr deploy- A job that deploys a image container using a aws_ecr_dockerfile_deploy
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v2
+            - name: Deploy container image to AWS ECR
+              uses: Timur-IT/aws-ecr-deploy@v0.08
+              id: deploy 
+              with:
+                access_key_id: ${{ secrets.MY_AWS_ACCESS_KEY }}
+                secret_access_key: ${{ secrets.MY_AWS_SECRET_KEY }}
+                image_name: nginx
+                repo_uri: 822137640983.dkr.ecr.us-west-1.amazonaws.com/app-main:nginx
 
-jobs:
-  create_cluster:
-    runs-on: ubuntu-latest
-    name: Create an EKS on Fargate cluster
-    steps:
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.MY_AWS_ACCESS_KEY }}
-        aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_KEY }}
-        aws-region: eu-west-1
-    - name: Provision cluster
-      uses: aws-actions/amazon-eks-fargate@v0.1
+            - name: Get the output status
+              run: echo "${{ steps.deploy.outputs.status }}"
